# emc2101_fan

./: .gitignore  CMakeLists.txt  README.md
arch/arm64/boot/dts/allwinner/overlays/: orange-pi-zero2-emc2101.dts  orange-pi-zero2-st7789v.dts
drivers/hwmon/: Kconfig  Makefile  emc2101.c
drivers/staging/fbtft/: Kconfig  Makefile  fb_st7789v.c
dts/: Makefile  orange-pi-zero2-emc2101.dts  orange-pi-zero2-st7789v.dts
patches/: 001-emc2101-driver.patch
src/: emc2101.cpp  emc2101.h  main.cpp  server.cpp  server.h
test/: server.cpp
